plugins {
    id 'org.jetbrains.kotlin.jvm' version '2.3.21'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

javafx {
    version = "21.0.2"
    modules = ['javafx.controls']
}

application {
    mainClass = 'org.yuezhikong.AppLauncher'
    applicationDefaultJvmArgs = [
        '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-opens', 'javafx.graphics/javafx.scene=ALL-UNNAMED',
        '--add-opens', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED'
    ]
}

group = 'org.yuezhikong'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    // Logging
    implementation 'org.apache.logging.log4j:log4j-api:2.26.0'
    implementation 'org.slf4j:jul-to-slf4j:2.0.18'
    implementation 'org.apache.logging.log4j:log4j-core:2.26.0'
    implementation('org.apache.logging.log4j:log4j-slf4j2-impl:2.26.0') {
        exclude group: 'org.slf4j', module: 'slf4j-api'
    }

    // Terminal
    implementation 'org.jline:jline:4.1.3'
    implementation 'org.fusesource.jansi:jansi:2.4.3'

    implementation 'org.slf4j:slf4j-api:2.0.18'
    implementation 'org.projectlombok:lombok:1.18.42'

    // Cert generator & JCE Provider
    implementation 'org.bouncycastle:bcprov-jdk18on:1.84'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.84'

    implementation 'commons-io:commons-io:2.22.0'
    compileOnly 'org.jetbrains:annotations:26.1.0'
    implementation 'io.netty:netty-all:4.2.15.Final'

    // gson
    implementation('com.google.code.gson:gson:2.14.0') {
        exclude group: 'com.google.errorprone', module: 'error_prone_annotations'
    }

    implementation 'org.mybatis:mybatis:3.5.19'
    implementation('org.xerial:sqlite-jdbc:3.53.1.0') {
        exclude group: 'org.slf4j', module: 'slf4j-api'
    }
    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

kotlin {
    jvmToolchain(17)
}

jar {
    manifest {
        attributes(
            'Main-Class': 'org.yuezhikong.AppLauncher',
            'Implementation-Title': 'JavaIM',
            'Implementation-Vendor': 'QiLechan',
            'Multi-Release': 'true'
        )
    }
}

shadowJar {
    archiveBaseName.set('JavaIMLite')
    archiveClassifier.set('')
    archiveVersion.set('1.0-SNAPSHOT')
    manifest {
        attributes(
            'Main-Class': 'org.yuezhikong.AppLauncher',
            'Implementation-Title': 'JavaIM',
            'Implementation-Vendor': 'QiLechan',
            'Multi-Release': 'true'
        )
    }
}

test {
    useJUnitPlatform()
}